syntax = "proto3";

package posts;

option go_package = "posts/;postspb";

message CreatePostReq {
    uint64 user_id = 1;
    string text = 2;
}

message CreatePostResp {
    string post_id = 1;
}

message UpdatePostReq {
    uint64 user_id = 1;
    string text = 2;
    string post_id = 3;
}

message UpdatePostResp {
}

message DeletePostReq {
    uint64 user_id = 1;
    string post_id = 2;
}

message DeletePostResp {
}

message GetPostReq {
    string post_id = 1;
}

message GetPostResp {
    string text = 1;
}

message GetAllPostsReq {
    uint64 user_id = 1;
    uint64 from = 2;
    uint64 count = 3;
}

message GetAllPostsResp {
    repeated string post_ids = 1;
    repeated string texts = 2;
}

message CheckIfPostExistsReq {
    string post_id = 1;
}

message CheckIfPostExistsResp {
    uint64 author_id = 1;
    bool exists = 2;
}

service PostsService {
    rpc CreatePost(CreatePostReq) returns (CreatePostResp) {}
    rpc UpdatePost(UpdatePostReq) returns (UpdatePostResp) {}
    rpc DeletePost(DeletePostReq) returns (DeletePostResp) {}
    rpc GetPost(GetPostReq) returns (GetPostResp) {}
    rpc GetAllPosts(GetAllPostsReq) returns (GetAllPostsResp) {}
    rpc CheckIfPostExists(CheckIfPostExistsReq) returns (CheckIfPostExistsResp) {}
}
